--- a/clasePosition/style.css
+++ b/clasePosition/style.css
@@ -4,11 +4,25 @@
     padding: 0;
 }
 
+.main-container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .parent{
-    border: 2px white dotted;
     width: 50%;
-    height: 50%;
+    height: content;
+}
+
+.box{
     display: inline-block;
+    background-color: red;
+    width: 100px;
+    height: 100px;
 }
 
 #one{
@@ -17,11 +31,13 @@
     padding: 35px;
     margin: 0 auto;
     background-color: red;
+    border: 1px white solid;
     border-radius: 15px;
     text-align: center;
-
     position: relative;
-    top: 35px;
+    top: 29px;
+    left: 174px;
+    z-index: 100;
 }
 
 #two{
@@ -31,9 +47,10 @@
     text-align: justify;
     padding: 100px 50px 100px 50px;
     background-color: gray;
+    border: 1px white solid;
     border-radius: 15px;
-}
+    position: relative;
+    left: 24px;
+    bottom: 20px;
 
-/* #two{
-    background-color: green;
-} */
+}
