Changes done to the mostly fluid class

--- a/ResponsiveDesign/mostlyFluid/tablet.css
+++ b/ResponsiveDesign/mostlyFluid/tablet.css
@@ -1,5 +1,9 @@
-.c2, 
-.c3, 
-.c4 {
-    width: 50%;
+@media (min-width: 600px) {
+    .c2, .c3 {
+        width: 50%;
+    }
+
+    .c4 {
+        width: 100%;
+    }
 }
