--- a/ResponsiveDesign/mostlyFluid/desktop.css
+++ b/ResponsiveDesign/mostlyFluid/desktop.css
@@ -1,19 +1,24 @@
-@media (min-width: 800px){
-    .container{
+@media (min-width: 800px) {
+    .container {
         width: 800px;
-        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
     }
-    .c1{
+
+    .c1 {
         width: 60%;
     }
-    .c2{
+
+    .c2 {
         width: 40%;
     }
-    .c3,.c4{
+
+    .c3, .c4 {
         width: 33%;
     }
-    .c5{
-        width:34%;
+
+    .c5 {
+        width: 34%;
     }
 
 }
